Added Register form body/HTML and icons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,46 @@
     <title>Sign Up</title>
 </head>
 <body>
-    
+    <!-- This header represents the top navbar box -->
+    <header>
+        <a href="#">About Us</a>
+        <a href="#">Log In</a>
+    </header>
+
+    <!-- This div represents the main form body -->
+    <div>
+        <!-- Sign up header -->
+        <header>
+            <h1>Sign Up</h1>
+        </header>
+
+        <!-- Form body -->
+        <form>
+            <div>
+                <input type="email" name="email" placeholder="Email" required />
+            </div>
+            <div>
+                <input type="text" name="username" placeholder="Username" required />
+            </div>
+            <div>
+                <input type="password" name="password" placeholder="Password" required />
+            </div>
+            <div>
+                <input type="password" name="confirmPassword" placeholder="Confirm Password" required />
+            </div>
+            <div>
+                <button type="submit">Submit</button>
+            </div>
+        </form>
+
+        <!-- Images footer -->
+        <footer>
+            <img src="./assets/amazonLogo.png" alt="Amazon Icon" height="32" width="32" />
+            <img src="./assets/facebookLogo.png" alt="Facebook Icon" height="32" width="32" />
+            <img src="./assets/githubLogo.png" alt="GitHub Icon" height="32" width="32" />
+            <img src="./assets/slackLogo.png" alt="Slack Icon" height="32" width="32" />
+            <img src="./assets/instagramLogo.png" alt="Instagram Icon" height="32" width="32" />
+        </footer>
+    </div>
 </body>
 </html>
