--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./main.css">
     <title>Sign Up</title>
 </head>
 <body>
     <!-- This header represents the top navbar box -->
     <header>
-        <a href="#">About Us</a>
-        <a href="#">Log In</a>
+        <a href="#" class="button-style">About Us</a>
+        <a href="#" class="button-style">Log In</a>
     </header>
 
     <!-- This div represents the main form body -->
-    <div>
+    <div class="container">
         <!-- Sign up header -->
         <header>
             <h1>Sign Up</h1>
@@ -35,7 +36,7 @@
                 <input type="password" name="confirmPassword" placeholder="Confirm Password" required />
             </div>
             <div>
-                <button type="submit">Submit</button>
+                <button type="submit" class="button-style">Submit</button>
             </div>
         </form>
 
